# django-filterly

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py  setup.cfg
django_filterly/: __init__.py  constants.py  exceptions.py  filterset.py  helpers.py  parser.py  transformers.py  validators.py
examples/: basic_usage.py
tests/: __init__.py  test_filters.py
