# setup.cfg (optional) — Legacy / supplementary configuration
#
# Can hold:
#   [metadata]       — name, version, description, author (alternative to pyproject.toml)
#   [options]        — packages, install_requires, python_requires
#   [options.extras_require] — dev dependencies
#   [tool:pytest]    — pytest settings (addopts, testpaths)
#   [flake8]         — linting rules
#   [mypy]           — type-checking configuration
#
# If all metadata lives in pyproject.toml this file can remain minimal or be removed.
